--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,7 @@ button { font-size: inherit; }
   <p>(including two strings a file fetched from GitHub)</p>
 
   <script type="module" async>
-import { downloadZip } from "../index.min.js";
+import { downloadZip } from "../index.js";
     
 async function test() {
   // an ArrayBuffer
